--- a/app/views/recipes/show.html.erb
+++ b/app/views/recipes/show.html.erb
@@ -33,6 +33,9 @@
                   <td><%= simple_format @recipe.body %></td>
                 </tr>
               </table>
+              <% if @recipe.user.id == current_user.id %>
+                <%= link_to "編集画面へ", edit_recipe_path(@recipe), class: "button is-success" %>
+              <% end %>
             </div>
           </div>
         </div>
@@ -40,3 +43,9 @@
     </div>
   </div>
 </section>
+
+<%= @recipe.user.username %>
+
+<%= link_to user_path(@recipe.user) do %>
+  <%= @recipe.user.username %>さんのページへ
+<% end %>
