--- a/app/views/recipes/edit.html.erb
+++ b/app/views/recipes/edit.html.erb
@@ -28,7 +28,7 @@
             <%= f.attachment_field :image, class: "input" %>
           </div>
 
-          <%= f.submit '投稿', class: "button is-success" %>
+          <%= f.submit '更新', class: "button is-success" %>
         <% end %>
       </div>
     </div>
