--- a/app/views/recipes/index.html.erb
+++ b/app/views/recipes/index.html.erb
@@ -25,7 +25,9 @@
               <div class="media">
                 <div class="media-left">
                   <figure class="image is-48x48">
-                    <%= attachment_image_tag recipe.user, :profile_image, fallback: "no-image.png", class: "profile_image" %>
+                  <%= link_to user_path(recipe.user.id) do %>
+                    <%= attachment_image_tag recipe.user, :profile_image, fallback: "no-image.png" %>
+                  <% end %>
                   </figure>
                 </div>
                 <div class="media-content">
